<resources>
    <string name="app_name">HackFest</string>

    <string name="title_section1">Discussion Forum</string>
    <string name="title_section2">Notes</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="Semester1">Semester 1</string>
    <string name="semester2">Semester 2</string>
    <string name="ec"><![CDATA[Electronics & Communications]]></string>
    <string name="cs">Computer Science</string>
    <string name="is">Information Science</string>
    <string name="civ">Civil Engineering</string>
    <string name="title_activity_subject">subject</string>

    <string name="hello_world">Hello world!</string>
</resources>
